<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">sgen_pourney</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_travel_info">TravelInfoActivity</string>
    <string name="app_id">246845782189659</string>
    <string name="title_activity_cover">CoverActivity</string>
    <string name="title_activity_join">JoinActivity</string>
    <string name="title_activity_coverCell">CoverCell</string>
    <string name="title_activity_photoput">PhotoputActivity</string>
    <string name="title_activity_album_cell">AlbumCellActivity</string>
    <string name="title_activity_video">VideoMakingActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">SimpleSideDrawer DEMO</string>
    <string name="profile_modifying">Profile</string>
    <string name="last_album">Albums</string>
    <string name="log_out">Log Out</string>
    <string name="ask">Ask</string>
    <string name="e_mail">E-Mail</string>
    <string name="e_mail_address">dut4824@naver.com</string>
    <string name="call">call</string>
    <string name="call_info">010.2974.5350</string>
    <string name="title_activity_ask">ask_activity</string>
    <string name="title_activity_drawer">drawer_activity</string>

    <!-- ListDialog를 위한 string -->
    <string name="photo_change_title">프로필 사진</string>

    <string-array name="photo_change_list_item">
        <item>사진 앨범</item>
        <item>카메라</item>
    </string-array>
    <string name="title_profile_modi">ProfileModi</string>
    <string name="title_activity_videoview">title_activtiy_videoview</string>
    <string-array name="cover_change_list_item">
        <item>사진 앨범</item>
        <item>카메라</item>
    </string-array>
    <string name="delete_text">나가기</string>
    <string name="video_view_title">VideoViewActivity</string>
    <string name="title_album_cover_selection">album_cover_selection</string>

</resources>