<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/i_backblue_995x1718" >

    <TextView
        android:id="@+id/e_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:text="@string/e_mail"
        android:textColor="#FFF"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/e_mail_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:text="@string/e_mail_address"
        android:textColor="#FFF"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:text="@string/call"
        android:textColor="#FFF"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/call_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="330dp"
        android:text="@string/call_info"
        android:textColor="#FFF"
        android:textSize="19sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/e_mail_address"
        android:layout_marginTop="48dp"
        android:src="@drawable/i_logoimage" />

</RelativeLayout>