<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@drawable/i_back"
    style="@style/leftBehindMenuScroll" >

    <RelativeLayout
        style="@style/behindMenuScrollContent"
        android:layout_width="match_parent"
        android:paddingTop="25dp" >

        <Button
            android:id="@+id/last_album_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="220dp"
            android:background="@android:color/transparent"
            android:text="@string/last_album"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/profile_modifying_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="280dp"
            android:background="@android:color/transparent"
            android:text="@string/profile_modifying"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/log_out_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="340dp"
            android:background="@android:color/transparent"
            android:text="@string/log_out"
            android:textColor="#FFF" />
        
        <Button
            android:id="@+id/ask_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="400dp"
            android:background="@android:color/transparent"
            android:text="@string/ask"
            android:textColor="#FFF" />

        <ImageView
            android:id="@+id/last_album_image"
            style="@style/behindMenuItemLabel"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="222dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_album" />

        <ImageView
            android:id="@+id/profile_modifying_image"
            style="@style/behindMenuItemLabel"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="282dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_pencil" />

        <ImageView
            android:id="@+id/log_out_image"
            style="@style/behindMenuItemLabel"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="342dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_logout" />
        
        <ImageView
            android:id="@+id/ask_image"
            style="@style/behindMenuItemLabel"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="402dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_speaker" />
    </RelativeLayout>

</ScrollView>